gitops/apps/captive-portal/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: identity-system
  labels:
    app.kubernetes.io/name: identity-system
    app.kubernetes.io/part-of: user-services
